fixed the extra space on the right

--- a/web/css/carousel.css
+++ b/web/css/carousel.css
@@ -59,7 +59,8 @@
 }
 
 .carousel-indicators{
-    left: 90%;
+    left: 115%;
+    width: 50px;
 }
 
 .carousel-indicators li{
